<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_refresh" android:title="@string/menu_refresh"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_location" android:title="@string/menu_location"
        android:orderInCategory="101" app:showAsAction="never" />
    <group android:id="@+id/group_units" android:checkableBehavior="single" android:orderInCategory="102">
        <item android:id="@+id/action_celsius" android:title="@string/menu_celsius" android:checked="true" />
        <item android:id="@+id/action_fahrenheit" android:title="@string/menu_fahrenheit" />
    </group>
</menu>
